# y_streamer

./: .env  .env.production  .gitignore  .typos.toml  CALL_TRANSCRIPT_W1.md  CALL_TRANSCRIPT_W2.md  CALL_TRANSCRIPT_W3.md  Cargo.toml  Dioxus.toml  Dockerfile  PLAN_NODES_GSTREAMER.md  PLAN__FEATURES.md  PLAN__MEDIA_PROBE_ENRICHMENT.md  PLAN__MP4_BOX_DIAGNOSTIC.md  PLAN__VIDEO_DEBUGGER_PIVOT.md  README.md  deploy_prod.sh  docker-compose.shared-server.yml  reset_db.sh  tailwind.css
.github/workflows/: prod-vps.yml
.sqlx/: query-5ff85447ff775a338b557d4e4dbfc07f5300a0e6faa0eb7f627ff22027bb6fe3.json  query-7086e796b0b64c822795e2ec4351f17793bb3c3e8afe4676671d12fbe73381a1.json  query-7692fadce463b298dcb75e41c1593ea8c9958ecdb18a9d53161295619217afbc.json  query-7dee51fd4001acf25aabd238f4f7932792eec5871571bc9a49d118ae5cc90422.json  query-b0aa65ee78c05cca48972d8cf5d4e49f52ee358aba22f10b30d4a1e003d82562.json  query-d7888b5d84f79458b79b61886a328b81abe01735b13cbe0743f72359b12d9d0e.json  query-f4b206d9994605be32bd8b515b1b23d618d595bc75a9db3847c92c72a1182658.json
__TUI_FFMRUST/: Cargo.toml  ROADMAP.md  __REPO_INSPIRATION.md  demo_drag_input.mov
__TUI_FFMRUST/drop_video_metadata/: Cargo.toml
__TUI_FFMRUST/drop_video_metadata/src/: main.rs
__TUI_FFMRUST/drop_video_metadata/src/hooks/: use_drag_and_drop.rs
__TUI_FFMRUST/src/: app.rs  job.rs  main.rs  terminal.rs
__TUI_FFMRUST/src/hooks/: mod.rs  use_drag_and_drop.rs
__TUI_FFMRUST/src/ui/: mod.rs  theme.rs
__TUI_FFMRUST/src/ui/components/: celebration.rs  current_job.rs  footer.rs  mod.rs  sidebar.rs
assets/: tailwind.css
crates/macros/: Cargo.toml
crates/macros/src/: lib.rs
migrations/: 20230714000010_create_users_table.sql  20250224072618_create_roleaccesses_table_for_xxx_schema.sql  20250316131000_create_todos_table.sql  20250521000000_create_bug_reports_table.sql
public/: tailwind.css
setup__remote/: nginx_vhost_ffmrust.conf
src/: app.rs  main.rs
src/components/: app_sidenav.rs  diagnostic_compare_panel.rs  mod.rs  sidenav.rs  workflow.rs
src/components/demos/: demo_dropzone.rs  demo_dropzone_grid.rs  demo_dropzone_overlay.rs  demo_dropzone_toggle.rs  demo_video_inspector.rs  mod.rs  workflow01.rs  workflow02.rs  workflow03.rs
src/components/hooks/: use_history_stack.rs  use_workflow.rs
src/components/ui/: badge.rs  context_menu.rs  dropzone.rs  field.rs  mod.rs  sidenav.rs  theme_toggle.rs  toolbar.rs
src/domain/: mod.rs
src/domain/auth/: access_controller.rs  app_error.rs  auth_context.rs  auth_session.rs  mod.rs
src/domain/auth/_users/: mod.rs  permission.rs  permission_user.rs  pk.rs  role.rs
src/domain/auth/routing/: access_demo_page.rs  dashboard_page.rs  login_page.rs  mod.rs  only_root_page.rs  profile_page.rs  protected_page.rs  users_page.rs
src/domain/bugreports/data/: bug_report.rs  bugreports_db.rs  mod.rs
src/domain/bugreports/routing/: bugreports_page.rs  mod.rs
src/domain/bugreports/service/: get_bugreports.rs  mod.rs
src/domain/diagnostic/: mod.rs
src/domain/diagnostic/data/: diagnostic_comparison.rs  diagnostic_report.rs  mod.rs  platform_profile.rs
src/domain/diagnostic/routing/: diagnostic_page.rs  mod.rs
src/domain/diagnostic/service/: diagnostic_rules.rs  mod.rs
src/domain/media_inspector/data/: media_probe_report.rs  mod.rs
src/domain/media_inspector/routing/: media_inspector_page.rs  mod.rs
src/domain/media_inspector/service/: ffprobe_mapper.rs  ffprobe_runner.rs  inspect_media_upload.rs  mod.rs  runtime_config.rs
src/domain/media_jobs/routing/: media_jobs_page.rs  mod.rs
src/domain/media_read/data/: diagnostic_progress.rs  media_probe_report.rs  mod.rs
src/domain/media_read/routing/: media_read_page.rs  mod.rs
src/domain/media_read/service/: ffprobe_mapper.rs  ffprobe_runner.rs  inspect_media_upload.rs  loudness_runner.rs  mediainfo_runner.rs  mod.rs  progress_store.rs  runtime_config.rs  scene_detector.rs  subtitle_extractor.rs  thumbnail_generator.rs  waveform_generator.rs
src/domain/media_write/data/: media_write_job.rs  mod.rs
src/domain/observability/: client_error.rs  client_error_handler.rs  error_reporter.rs  mod.rs
src/domain/test/routing/: mod.rs  (+3 more)
style/: tailwind.css
(+20 files in other folders)
