[workspace]
members = ["crates/macros"]
exclude = ["__TUI_FFMRUST/*"]

[package]
name = "video_platform_app"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "video_platform_app"
path = "src/main.rs"

[dependencies]
app_macros = { path = "crates/macros" }
dioxus = { version = "0.7", features = ["router", "fullstack"] }
dioxus-fullstack = { version = "0.7", optional = true }
tw_merge = { version = "0.1", features = ["debug"] }
icons = { version = "0.18", features = ["dioxus"] }
serde = { version = "1", features = ["derive"] }
strum = { version = "0.26", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "v7", "serde", "js"] }
time = { version = "0.3", features = ["serde"] }
tracing = "0.1"

# Server-only
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "macros", "uuid", "time"], optional = true }
axum = { version = "0.8", features = ["multipart"], optional = true }
axum_session = { version = "0.16", optional = true }
axum_session_auth = { version = "0.16", optional = true }
axum_session_sqlx = { version = "0.5", optional = true }
pwhash = { version = "1", optional = true }
dotenv = { version = "0.15", optional = true }
anyhow = { version = "1", optional = true }
base64 = { version = "0.22", optional = true }
async-trait = { version = "0.1", optional = true }
tokio = { version = "1", features = ["fs", "io-util", "process", "rt", "time"], optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"], optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["Window", "DragEvent", "DataTransfer", "FileList", "File", "Url", "Blob", "BlobPropertyBag", "Element", "Event", "EventTarget", "HtmlVideoElement", "HtmlAnchorElement", "HtmlCanvasElement", "CanvasRenderingContext2d", "Document", "FormData", "Request", "RequestInit", "Response", "Headers", "XmlHttpRequest", "XmlHttpRequestUpload", "ProgressEvent"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"

[features]
default = ["web"]
server = [
    "dioxus/server",
    "dep:dioxus-fullstack",
    "dep:sqlx",
    "dep:axum",
    "dep:axum_session",
    "dep:axum_session_auth",
    "dep:axum_session_sqlx",
    "dep:pwhash",
    "dep:dotenv",
    "dep:anyhow",
    "dep:async-trait",
    "dep:tokio",
    "dep:tracing-subscriber",
    "dep:base64",
]
web = ["dioxus/web"]
